--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "314c471e",
    "metadata": {},
    "outputs": [],
@@ -15,8 +15,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "505afaec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMAGE_SIZE = 256\n",
+    "BATCH_SIZE = 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "3e22ebac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2152 files belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset=tf.keras.preprocessing.image_dataset_from_directory(\n",
+    "    \"PlantVillage\",\n",
+    "    shuffle=True,\n",
+    "    image_size=(IMAGE_SIZE, IMAGE_SIZE),\n",
+    "    batch_size = BATCH_SIZE\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c05e3a7",
    "metadata": {},
    "outputs": [],
    "source": []
