--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -73,24 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "4c05e3a7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Potato___Early_blight', 'Potato___Late_blight', 'Potato___healthy']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class_names = dataset.class_names\n",
-    "class_names"
+    "class_names\n",
+    "CHANNELS=3\n",
+    "EPOCHS=50"
    ]
   },
   {
@@ -217,11 +208,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "df21f265",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Function to Split Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3334ce17",
+   "metadata": {},
+   "source": [
+    "Dataset should be bifurcated into 3 subsets, namely:\n",
+    "\n",
+    "1.Training: Dataset to be used while training(80%)\n",
+    "\n",
+    "2.Validation: Dataset to be tested against while training(10%)\n",
+    "\n",
+    "3.Test: Dataset to be tested against after we trained a model(10%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e9886f0",
+   "metadata": {},
    "source": []
   }
  ],
