--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -361,6 +361,70 @@
     "test_ds = test_ds.skip(6)\n",
     "len(test_ds)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ce3d736d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dataset_partitions_tf(ds, train_split=0.8, val_split=0.1, test_split=0.1, shuffle=True, shuffle_size=10000):\n",
+    "    assert (train_split + test_split + val_split) == 1\n",
+    "    \n",
+    "    ds_size = len(ds)\n",
+    "    \n",
+    "    if shuffle:\n",
+    "        ds = ds.shuffle(shuffle_size, seed=12)\n",
+    "    \n",
+    "    train_size = int(train_split * ds_size)\n",
+    "    val_size = int(val_split * ds_size)\n",
+    "    \n",
+    "    train_ds = ds.take(train_size)    \n",
+    "    val_ds = ds.skip(train_size).take(val_size)\n",
+    "    test_ds = ds.skip(train_size).skip(val_size)\n",
+    "    \n",
+    "    return train_ds, val_ds, test_ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "89291090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ds, val_ds, test_ds = get_dataset_partitions_tf(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f91b872a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5db182ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
