--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -461,6 +461,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ee9a169",
+   "metadata": {},
+   "source": [
+    "Cache, Shuffle, and Prefetch the Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "d747b8ae",
@@ -473,9 +481,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75f73112",
+   "metadata": {},
+   "source": [
+    "Building the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "30c9dd4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating a Layer for Resizing and Normalization\n",
+    "resize_and_rescale = tf.keras.Sequential([\n",
+    "  layers.experimental.preprocessing.Resizing(IMAGE_SIZE, IMAGE_SIZE),\n",
+    "  layers.experimental.preprocessing.Rescaling(1./255),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f57f81cb",
+   "metadata": {},
+   "source": [
+    "Data Augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f73112",
+   "id": "98e37342",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7472aed4",
    "metadata": {},
    "outputs": [],
    "source": []
