--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -512,16 +512,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98e37342",
+   "execution_count": 26,
+   "id": "7472aed4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_augmentation = tf.keras.Sequential([\n",
+    "  layers.experimental.preprocessing.RandomFlip(\"horizontal_and_vertical\"),\n",
+    "  layers.experimental.preprocessing.RandomRotation(0.2),\n",
+    "])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7472aed4",
+   "id": "6a193141",
    "metadata": {},
    "outputs": [],
    "source": []
