--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -524,9 +524,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a193141",
+   "metadata": {},
+   "source": [
+    "Applying Data Augmentation to Train Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c0b6106c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ds = train_ds.map(\n",
+    "    lambda x, y: (data_augmentation(x, training=True), y)\n",
+    ").prefetch(buffer_size=tf.data.AUTOTUNE)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a193141",
+   "id": "0be485d1",
    "metadata": {},
    "outputs": [],
    "source": []
