--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -544,9 +544,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0be485d1",
+   "metadata": {},
+   "source": [
+    "Model Architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "237a3982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_shape = (BATCH_SIZE, IMAGE_SIZE, IMAGE_SIZE, CHANNELS)\n",
+    "n_classes = 3\n",
+    "\n",
+    "model = models.Sequential([\n",
+    "    resize_and_rescale,\n",
+    "    layers.Conv2D(32, kernel_size = (3,3), activation='relu', input_shape=input_shape),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    layers.Conv2D(64,  kernel_size = (3,3), activation='relu'),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    layers.Conv2D(64,  kernel_size = (3,3), activation='relu'),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(64, activation='relu'),\n",
+    "    layers.Dense(n_classes, activation='softmax'),\n",
+    "])\n",
+    "\n",
+    "model.build(input_shape=input_shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0be485d1",
+   "id": "11a9366f",
    "metadata": {},
    "outputs": [],
    "source": []
