--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -585,8 +585,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "11a9366f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " sequential (Sequential)     (32, 256, 256, 3)         0         \n",
+      "                                                                 \n",
+      " conv2d (Conv2D)             (32, 254, 254, 32)        896       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (32, 127, 127, 32)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (32, 125, 125, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (32, 62, 62, 64)         0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (32, 60, 60, 64)          36928     \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (32, 30, 30, 64)         0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (32, 28, 28, 64)          36928     \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (32, 14, 14, 64)         0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_4 (Conv2D)           (32, 12, 12, 64)          36928     \n",
+      "                                                                 \n",
+      " max_pooling2d_4 (MaxPooling  (32, 6, 6, 64)           0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_5 (Conv2D)           (32, 4, 4, 64)            36928     \n",
+      "                                                                 \n",
+      " max_pooling2d_5 (MaxPooling  (32, 2, 2, 64)           0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (32, 256)                 0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (32, 64)                  16448     \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (32, 3)                   195       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 183,747\n",
+      "Trainable params: 183,747\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f2a448b",
+   "metadata": {},
+   "source": [
+    "Compiling the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3571710a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=False),\n",
+    "    metrics=['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8a61dcec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "54/54 [==============================] - 111s 2s/step - loss: 0.9163 - accuracy: 0.4878 - val_loss: 0.8595 - val_accuracy: 0.6146\n",
+      "Epoch 2/50\n",
+      "54/54 [==============================] - 102s 2s/step - loss: 0.7424 - accuracy: 0.6545 - val_loss: 0.5813 - val_accuracy: 0.7396\n",
+      "Epoch 3/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.4520 - accuracy: 0.8218 - val_loss: 0.3910 - val_accuracy: 0.8490\n",
+      "Epoch 4/50\n",
+      "54/54 [==============================] - 107s 2s/step - loss: 0.3383 - accuracy: 0.8663 - val_loss: 0.3487 - val_accuracy: 0.8594\n",
+      "Epoch 5/50\n",
+      "54/54 [==============================] - 107s 2s/step - loss: 0.2456 - accuracy: 0.9051 - val_loss: 0.3852 - val_accuracy: 0.8490\n",
+      "Epoch 6/50\n",
+      "54/54 [==============================] - 106s 2s/step - loss: 0.2718 - accuracy: 0.8929 - val_loss: 0.2927 - val_accuracy: 0.8646\n",
+      "Epoch 7/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.2438 - accuracy: 0.9080 - val_loss: 0.6121 - val_accuracy: 0.7708\n",
+      "Epoch 8/50\n",
+      "54/54 [==============================] - 106s 2s/step - loss: 0.2277 - accuracy: 0.9161 - val_loss: 0.2728 - val_accuracy: 0.8802\n",
+      "Epoch 9/50\n",
+      "54/54 [==============================] - 106s 2s/step - loss: 0.1759 - accuracy: 0.9375 - val_loss: 0.3914 - val_accuracy: 0.8750\n",
+      "Epoch 10/50\n",
+      "54/54 [==============================] - 108s 2s/step - loss: 0.1556 - accuracy: 0.9387 - val_loss: 0.3710 - val_accuracy: 0.8854\n",
+      "Epoch 11/50\n",
+      "54/54 [==============================] - 107s 2s/step - loss: 0.1527 - accuracy: 0.9427 - val_loss: 0.1987 - val_accuracy: 0.9062\n",
+      "Epoch 12/50\n",
+      "54/54 [==============================] - 110s 2s/step - loss: 0.0995 - accuracy: 0.9635 - val_loss: 0.3730 - val_accuracy: 0.8906\n",
+      "Epoch 13/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.1058 - accuracy: 0.9595 - val_loss: 0.1964 - val_accuracy: 0.9323\n",
+      "Epoch 14/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0819 - accuracy: 0.9688 - val_loss: 0.5504 - val_accuracy: 0.8906\n",
+      "Epoch 15/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.1062 - accuracy: 0.9647 - val_loss: 0.2983 - val_accuracy: 0.8958\n",
+      "Epoch 16/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0565 - accuracy: 0.9821 - val_loss: 0.3224 - val_accuracy: 0.9115\n",
+      "Epoch 17/50\n",
+      "54/54 [==============================] - 108s 2s/step - loss: 0.1495 - accuracy: 0.9450 - val_loss: 0.1728 - val_accuracy: 0.9375\n",
+      "Epoch 18/50\n",
+      "54/54 [==============================] - 114s 2s/step - loss: 0.0546 - accuracy: 0.9815 - val_loss: 0.7828 - val_accuracy: 0.8177\n",
+      "Epoch 19/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.0668 - accuracy: 0.9769 - val_loss: 0.1898 - val_accuracy: 0.9219\n",
+      "Epoch 20/50\n",
+      "54/54 [==============================] - 103s 2s/step - loss: 0.0635 - accuracy: 0.9774 - val_loss: 0.7451 - val_accuracy: 0.7917\n",
+      "Epoch 21/50\n",
+      "54/54 [==============================] - 102s 2s/step - loss: 0.0663 - accuracy: 0.9716 - val_loss: 0.2683 - val_accuracy: 0.8958\n",
+      "Epoch 22/50\n",
+      "54/54 [==============================] - 107s 2s/step - loss: 0.0455 - accuracy: 0.9855 - val_loss: 0.2365 - val_accuracy: 0.9375\n",
+      "Epoch 23/50\n",
+      "54/54 [==============================] - 99s 2s/step - loss: 0.0406 - accuracy: 0.9850 - val_loss: 0.2605 - val_accuracy: 0.9323\n",
+      "Epoch 24/50\n",
+      "54/54 [==============================] - 101s 2s/step - loss: 0.0342 - accuracy: 0.9861 - val_loss: 0.4429 - val_accuracy: 0.8802\n",
+      "Epoch 25/50\n",
+      "54/54 [==============================] - 98s 2s/step - loss: 0.0826 - accuracy: 0.9745 - val_loss: 0.1412 - val_accuracy: 0.9479\n",
+      "Epoch 26/50\n",
+      "54/54 [==============================] - 112s 2s/step - loss: 0.0303 - accuracy: 0.9884 - val_loss: 0.1976 - val_accuracy: 0.9479\n",
+      "Epoch 27/50\n",
+      "54/54 [==============================] - 117s 2s/step - loss: 0.0332 - accuracy: 0.9884 - val_loss: 0.1756 - val_accuracy: 0.9531\n",
+      "Epoch 28/50\n",
+      "54/54 [==============================] - 112s 2s/step - loss: 0.0816 - accuracy: 0.9711 - val_loss: 0.6414 - val_accuracy: 0.7917\n",
+      "Epoch 29/50\n",
+      "54/54 [==============================] - 106s 2s/step - loss: 0.0382 - accuracy: 0.9873 - val_loss: 0.3690 - val_accuracy: 0.9062\n",
+      "Epoch 30/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0317 - accuracy: 0.9884 - val_loss: 0.1179 - val_accuracy: 0.9688\n",
+      "Epoch 31/50\n",
+      "54/54 [==============================] - 108s 2s/step - loss: 0.0220 - accuracy: 0.9919 - val_loss: 0.1558 - val_accuracy: 0.9531\n",
+      "Epoch 32/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.0440 - accuracy: 0.9844 - val_loss: 0.2106 - val_accuracy: 0.9271\n",
+      "Epoch 33/50\n",
+      "54/54 [==============================] - 103s 2s/step - loss: 0.0288 - accuracy: 0.9878 - val_loss: 0.3554 - val_accuracy: 0.9062\n",
+      "Epoch 34/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.0940 - accuracy: 0.9664 - val_loss: 0.1127 - val_accuracy: 0.9635\n",
+      "Epoch 35/50\n",
+      "54/54 [==============================] - 107s 2s/step - loss: 0.0643 - accuracy: 0.9769 - val_loss: 0.3485 - val_accuracy: 0.8958\n",
+      "Epoch 36/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0302 - accuracy: 0.9884 - val_loss: 0.1287 - val_accuracy: 0.9531\n",
+      "Epoch 37/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0182 - accuracy: 0.9942 - val_loss: 0.0629 - val_accuracy: 0.9792\n",
+      "Epoch 38/50\n",
+      "54/54 [==============================] - 103s 2s/step - loss: 0.0413 - accuracy: 0.9890 - val_loss: 0.2998 - val_accuracy: 0.9062\n",
+      "Epoch 39/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.0275 - accuracy: 0.9902 - val_loss: 0.0733 - val_accuracy: 0.9740\n",
+      "Epoch 40/50\n",
+      "54/54 [==============================] - 103s 2s/step - loss: 0.0301 - accuracy: 0.9896 - val_loss: 0.4682 - val_accuracy: 0.9010\n",
+      "Epoch 41/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.0561 - accuracy: 0.9815 - val_loss: 0.1053 - val_accuracy: 0.9635\n",
+      "Epoch 42/50\n",
+      "54/54 [==============================] - 105s 2s/step - loss: 0.0278 - accuracy: 0.9925 - val_loss: 0.1111 - val_accuracy: 0.9531\n",
+      "Epoch 43/50\n",
+      "54/54 [==============================] - 103s 2s/step - loss: 0.0385 - accuracy: 0.9838 - val_loss: 0.0530 - val_accuracy: 0.9792\n",
+      "Epoch 44/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0220 - accuracy: 0.9919 - val_loss: 0.2757 - val_accuracy: 0.9323\n",
+      "Epoch 45/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0355 - accuracy: 0.9873 - val_loss: 0.3540 - val_accuracy: 0.8750\n",
+      "Epoch 46/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0347 - accuracy: 0.9850 - val_loss: 0.7921 - val_accuracy: 0.8229\n",
+      "Epoch 47/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0438 - accuracy: 0.9850 - val_loss: 1.0493 - val_accuracy: 0.7552\n",
+      "Epoch 48/50\n",
+      "54/54 [==============================] - 104s 2s/step - loss: 0.0336 - accuracy: 0.9896 - val_loss: 0.2395 - val_accuracy: 0.9375\n",
+      "Epoch 49/50\n",
+      "54/54 [==============================] - 118s 2s/step - loss: 0.0259 - accuracy: 0.9902 - val_loss: 0.0733 - val_accuracy: 0.9688\n",
+      "Epoch 50/50\n",
+      "54/54 [==============================] - 116s 2s/step - loss: 0.0209 - accuracy: 0.9925 - val_loss: 0.1516 - val_accuracy: 0.9740\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(\n",
+    "    train_ds,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    validation_data=val_ds,\n",
+    "    verbose=1,\n",
+    "    epochs=50,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c7dfae8",
    "metadata": {},
    "outputs": [],
    "source": []
