--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -854,8 +854,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "6cc218f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'verbose': 1, 'epochs': 50, 'steps': 54}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history.params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d0815ac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['loss', 'accuracy', 'val_loss', 'val_accuracy'])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history.history.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fcc1c53c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(history.history['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0fd7bf7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.4878472089767456,\n",
+       " 0.6545138955116272,\n",
+       " 0.8217592835426331,\n",
+       " 0.8663194179534912,\n",
+       " 0.9050925970077515,\n",
+       " 0.8929398059844971,\n",
+       " 0.9079861044883728,\n",
+       " 0.9160879850387573,\n",
+       " 0.9375,\n",
+       " 0.9386574029922485,\n",
+       " 0.9427083134651184,\n",
+       " 0.9635416865348816,\n",
+       " 0.9594907164573669,\n",
+       " 0.96875,\n",
+       " 0.9646990895271301,\n",
+       " 0.9820601940155029,\n",
+       " 0.9450231194496155,\n",
+       " 0.9814814925193787,\n",
+       " 0.9768518805503845,\n",
+       " 0.9774305820465088,\n",
+       " 0.9716435074806213,\n",
+       " 0.9855324029922485,\n",
+       " 0.9849537014961243,\n",
+       " 0.9861111044883728,\n",
+       " 0.9745370149612427,\n",
+       " 0.9884259104728699,\n",
+       " 0.9884259104728699,\n",
+       " 0.9710648059844971,\n",
+       " 0.9872685074806213,\n",
+       " 0.9884259104728699,\n",
+       " 0.9918981194496155,\n",
+       " 0.984375,\n",
+       " 0.9878472089767456,\n",
+       " 0.9664351940155029,\n",
+       " 0.9768518805503845,\n",
+       " 0.9884259104728699,\n",
+       " 0.9942129850387573,\n",
+       " 0.9890046119689941,\n",
+       " 0.9901620149612427,\n",
+       " 0.9895833134651184,\n",
+       " 0.9814814925193787,\n",
+       " 0.9924768805503845,\n",
+       " 0.9837962985038757,\n",
+       " 0.9918981194496155,\n",
+       " 0.9872685074806213,\n",
+       " 0.9849537014961243,\n",
+       " 0.9849537014961243,\n",
+       " 0.9895833134651184,\n",
+       " 0.9901620149612427,\n",
+       " 0.9924768805503845]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history.history['accuracy']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "70a852bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9162771701812744,\n",
+       " 0.7424415349960327,\n",
+       " 0.45195814967155457,\n",
+       " 0.3383302092552185,\n",
+       " 0.2456417679786682]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history.history['loss'][:5] # show loss for first 5 epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "dba6f6e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
+    "\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13f6d75b",
    "metadata": {},
    "outputs": [],
    "source": []
