--- a/Potato Disease/CNN.ipynb
+++ b/Potato Disease/CNN.ipynb
@@ -1117,8 +1117,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "635741fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(model, img):\n",
+    "    img_array = tf.keras.preprocessing.image.img_to_array(images[i].numpy())\n",
+    "    img_array = tf.expand_dims(img_array, 0)\n",
+    "\n",
+    "    predictions = model.predict(img_array)\n",
+    "\n",
+    "    predicted_class = class_names[np.argmax(predictions[0])]\n",
+    "    confidence = round(100 * (np.max(predictions[0])), 2)\n",
+    "    return predicted_class, confidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b16e98c8",
    "metadata": {},
    "outputs": [],
    "source": []
